samples/_failures_safe/1761267199_f4e8f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0caca7d6.c: In function ‘main’:
./samples/SAFE/__tmp_0caca7d6.c:140:5: error: expected declaration or statement at end of input
  140 |     }
      |     ^
